methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:3: error: not found: value bis
  while(bis==0){
        ^SlugHunting:6: error: not found: value bis
      bis = 1
      ^