methods.slug.SlugHunting.scala.code
def hunt() {
  while(bis==0){
  while(isFacingTrail()){
    if(estSurBiscuit()){
      bis = 1
      prendBiscuit()
      return
    }
    baisseBrosse()
    avance()
    leveBrosse()
  }
  left()
  }
}

def isFacingTrail():Boolean = {
  if(estFaceMur()){
    return false
  }
  avance()
  if(getCouleurSol()==Color.green){
    recule()
    return true
  }
  else{
    recule()
    return false
  }
}